Actualización de css y el index

--- a/bases.html
+++ b/bases.html
@@ -12,7 +12,7 @@
 		<header>
 			<div class="row">
 				<!--TEXTO ENCABEZADO-->
-				<div class="card-panel col s8 offset-s2" id="cardbss">
+				<div class="card-panel col s8 offset-s2 z-depth-2" id="cardbss">
 					<h2 class="center-align txthdr">Bases del concurso</h2>
 				</div>
 				<div class="col s1 offset-s1"> <!--ICONO QUE REGRESA A PÁG. INICIO-->
@@ -22,7 +22,7 @@
 		</header>
 		<main class="row"> <!--CONTENEDOR BASES-->
 			<div class="col s8 offset-s2">
-				<h4 class="valign-wrapper" id="txtbss">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean in augue et neque fringilla cursus. In rutrum dui vitae felis suscipit malesuada. Nunc quis metus venenatis, cursus neque a, elementum ante. Donec dignissim lorem id lorem placerat, id egestas leo dapibus. Nulla eros urna, interdum vel metus eget, eleifend tincidunt felis. Curabitur accumsan, libero vel maximus consectetur, risus lectus euismod augue, eget tincidunt libero nisl bibendum purus. Sed sodales vulputate felis, commodo aliquet urna scelerisque non. Praesent vestibulum accumsan nisl id eleifend. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras vel ornare ante. Curabitur ultricies elit sed auctor vestibulum. Suspendisse at ligula bibendum, sagittis augue id, fringilla tellus.</h4>
+				<h4 class="valign-wrapper z-depth-1" id="txtbss">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean in augue et neque fringilla cursus. In rutrum dui vitae felis suscipit malesuada. Nunc quis metus venenatis, cursus neque a, elementum ante. Donec dignissim lorem id lorem placerat, id egestas leo dapibus. Nulla eros urna, interdum vel metus eget, eleifend tincidunt felis. Curabitur accumsan, libero vel maximus consectetur, risus lectus euismod augue, eget tincidunt libero nisl bibendum purus. Sed sodales vulputate felis, commodo aliquet urna scelerisque non. Praesent vestibulum accumsan nisl id eleifend. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras vel ornare ante. Curabitur ultricies elit sed auctor vestibulum. Suspendisse at ligula bibendum, sagittis augue id, fringilla tellus.</h4>
 			</div>
 		</main>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
