--- a/conectate.html
+++ b/conectate.html
@@ -12,7 +12,7 @@
 	<body>
 		<header class="row">
 				<!--TEXTO ENCABEZADO-->
-				<div class="card-panel col s8 offset-s2" id="cardcnct">
+				<div class="card-panel col s8 offset-s2 z-depth-2" id="cardcnct">
 					<h2 class="center-align txthdr">Conéctate para subir tu obra al concurso</h2>
 				</div>
 				<div class="col s1 offset-s1"> <!--ICONO QUE REGRESA A PÁG. INICIO-->
