--- a/graciasCari.html
+++ b/graciasCari.html
@@ -19,7 +19,7 @@
 		</header>
 		<main class="row">
 			<div class="col s8 offset-s2"> <!--CONTENEDOR TEXTO GRACIAS CARICATURA-->
-				<div class="card-panel" id="tjtgraciasca">
+				<div class="card-panel z-depth-2" id="tjtgraciasca">
 					<h2 class="center-align txtgracias"><p>¡GRACIAS POR PARTICIPAR!<p><br>Estamos revisando tu caricatura.</br>No te preocupes si aún no la ves publicada, tardará algunos<br>instantes en aparecer.</h2>
 				</div>
 			</div>
