--- a/subeCari.html
+++ b/subeCari.html
@@ -13,7 +13,7 @@
 		<header>
 			<div class="row">
 				<!--TEXTO ENCABEZADO-->
-				<div class="card-panel col s8 offset-s2" id="cardsuca">
+				<div class="card-panel col s8 offset-s2 z-depth-2" id="cardsuca">
 					<h2 class="center-align txthdr">Sube tu caricatura</h2>
 					<h6 class="center-align txtnota">(Recuerda que solo puedes subir una caricatura)</h6>
 				</div>
@@ -26,11 +26,9 @@
 			<div class="row subeinfo">
 				<form class="col s8 offset-s2">
 					<!--TÍTULO DE LA OBRA-->
-	  	   			<input id="first_name" type="text" class="validate">
-	          		<label class="active" for="first_name"><h6>Título de tu Caricatura.</h6></label>
+	  	   			<input id="first_name" type="text" class="validate" placeholder="Título de tu Caricatura">
 					<!--DESCRIPCIÓN DE LA OBRA-->
-					<textarea id="textarea1" class="materialize-textarea"></textarea>
-		        	<label class="active" for="textarea1"><h6>Describe tu Caricatura.</h6></label>
+					<textarea id="textarea1" class="materialize-textarea" placeholder="Describe tu Caricatura"></textarea>
 					<!--BOTÓN QUE SUBE ARCHIVO DE LA OBRA-->
 		        	<div class="file-field input-field">
 				    	<div class="btn waves-effect waves-light btn-large" id="botsuca">
@@ -43,8 +41,8 @@
 				    	</div>
    				 	</div>
    				 	<!--CORREO ELECTRÓNICO-->
-		           	<input id="email" type="email" class="validate">
-		        	<label class="active" for="email"><h6>Ingresa tu correo electrónico, por este medio nos pondremos en contacto contigo.</h6></label>
+		           	<input id="email" type="email" class="validate" placeholder="Ingresa tu correo electrónico">
+		        	<label class="active" for="email"><h6>(Por este medio nos pondremos en contacto contigo)</h6></label>
 				</form>
 			</div>
 			<!--TÉRMINOS Y CONDICIONES-->
