--- a/subeCuento.html
+++ b/subeCuento.html
@@ -13,7 +13,7 @@
 		<header>
 			<div class="row">
 				<!--TEXTO ENCABEZADO-->
-				<div class="card-panel col s8 offset-s2" id="cardsucu">
+				<div class="card-panel col s8 offset-s2 z-depth-2" id="cardsucu">
 					<h2 class="center-align txthdr">Cuéntanos tu cuento</h2>		
 				</div>
 				<div class="col s1 offset-s1"> <!--ICONO QUE REGRESA A PÁG. INICIO-->
@@ -26,14 +26,12 @@
 			<div class="row subeinfo">
 				<form class="col s8 offset-s2">
 					<!--TÍTULO DE LA OBRA-->
-	  	   			<input id="first_name" type="text" class="validate">
-	          		<label class="active" for="first_name"><h6>Título del Cuento.</h6></label>
+	  	   			<input id="first_name" type="text" class="validate" placeholder="Título del Cuento">
 					<!--DESCRIPCIÓN DE LA OBRA-->
-					<textarea id="textarea1" class="materialize-textarea"></textarea>
-		        	<label class="active" for="textarea1"><h6>Escribe tu Cuento en menos de mil palabras.</h6></label>
+					<textarea id="textarea1" class="materialize-textarea" placeholder="Escribe tu Cuento en menos de mil palabras"></textarea>
 		        	<!--CORREO ELECTRÓNICO-->
-		           	<input id="email" type="email" class="validate">
-		        	<label class="active" for="email"><h6>Ingresa tu Correo Electrónico, por este medio nos pondremos en contacto contigo.</h6></label>
+		           	<input id="email" type="email" class="validate" placeholder="Ingresa tu correo electrónico">
+		        	<label class="active" for="email"><h6>(Por este medio nos pondremos en contacto contigo)</h6></label>
 				</form>
 			</div>
 			<!--TÉRMINOS Y CONDICIONES-->
