--- a/tipoPieza.html
+++ b/tipoPieza.html
@@ -13,7 +13,7 @@
 		<header>
 			<div class="row">
 				<!--TEXTO ENCABEZADO-->
-				<div class="card-panel col s8 offset-s2" id="cardtppz">
+				<div class="card-panel col s8 offset-s2 z-depth-2" id="cardtppz">
 					<h2 class="center-align txthdr">¿En que categoría<br>deseas participar?</h2>
 				</div>
 				<div class="col s1 offset-s1"> <!--ICONO QUE REGRESA A PÁG. INICIO-->
