--- a/graciasCuento.html
+++ b/graciasCuento.html
@@ -19,7 +19,7 @@
 		</header>
 		<main class="row">
 			<div class="col s8 offset-s2"> <!--CONTENEDOR TEXTO GRACIAS CUENTO-->
-				<div class="card-panel" id="tjtgraciascu">
+				<div class="card-panel z-depth-2" id="tjtgraciascu">
 					<h2 class="center-align txtgracias"><p>¡GRACIAS POR PARTICIPAR!<p><br>Estamos revisando tu cuento.</br>No te preocupes si aún no lo ves publicado, tardará algunos<br>instantes en aparecer.</h2>
 				</div>
 			</div>
