--- a/index.html
+++ b/index.html
@@ -1,86 +1,85 @@
-	<!DOCTYPE html>
+	<!DOCTYPE html> 
 	<html lang="es">
 	<head>
 		<meta charset="utf-8">
-		<title>Concurso Masterpeace</title>
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+		<title>Sube tu pieza</title>
 		<link rel="stylesheet" type="text/css" href="css/styles.css">
-	  	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
-	  	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
-	</head>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
+		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<head>
 	<body>
-		<br>
-		<header>
-			<div class="row">
-				<div class="col s4">
-					<img class="responsive-img" src="img/mp.png">
-				</div>
-				<div class="col s8">
-					<h2 class="left-align">Segundo concurso Masterpeace México de fotografía, cuento y caricatura</h2>
-				</div>
+		<!--IMAGEN ENCABEZADO-->
+		<header class="row" id="hdrndx">
+			<div class="col s2 offset-s2" id="divimgndx">
+				<img class="responsive-img" src="img/mp.png">
 			</div>
-			<br>
-			<div class="row">
-				<div class="col s8 offset-s2">
-					<a class="waves-effect waves-light btn-large botonindex1" href="bases.html" id="botonindex1">Bases</a>
-					<a class="waves-effect waves-light btn-large" href="conectate.html" id="botonindex2">Sube tu pieza</a>
-				</div>
-			</div>	
+			<!--TEXTO ENCABEZADO-->
+			<div class="col s6" id="divtxtndx">
+				<h2 class="txthdrndx">Segundo concurso<br>Masterpeace México<br>de fotografía, cuento <br>y caricatura.</h2>
+			</div>
 		</header>
-		<!-- este DIV es para el espacio de busqueda -->
-		<div class="row">
-			<div class="col s3 offset-s8">
-				<div class="input-field">
-	          		<i class="material-icons prefix">search</i>
-	          		<input id="search" type="text" class="validate">
-	          		<label for="search">buscar</label>
-	        	</div>
-	        </div>
-	    </div>
-		<div class="container">
-			<div class="card teal accent-4 tarjetas">
-				<div class="row">
-						<img class="circle col s4 responsive-img" src="img/cools_pic.png">
-					<div class="col s8">
-						<h3>Nombre del autor</h4>
-						<h3>Cuento: Nombre de la obra</h3>
-						<h4>Descripción de la obra</h4>
-					</div>
-				</div>	
-			</div>
+		<!--BOTONES-->
+		<div class="row divbotndx">
+			<div class="col s8 push-s3">
+				<a class="waves-effect waves-light btn-large col s4 botndx" href="bases.html">Bases</a>
+				<a class="waves-effect waves-light btn-large col s4 push-s1 botndx" href="tipoPieza.html">Sube tu pieza</a>
+			</div>	
 		</div>
-		<br>
-		<div class="container">
-			<div class="card teal accent-4 tarjetas">
-				<div class="row">
-					<img class="circle col s4 responsive-img" src="img/cools_pic.png">
-					<div class="col s8">
-						<h3>Nombre del autor</h3>
-						<h3>Serie de fotografías: Nombre de la serie</h3>
-						<div>
-							<h4>Aqui la serie </h4>
+		<main id="mnndx">
+			<!--BÚSQUEDA-->
+			<div class="row">
+				<div class="col s4 offset-s6">
+					<div class="input-field">
+		          		<i class="material-icons prefix">search</i>
+		          		<input id="search" type="text" class="validate" placeholder="Buscar obras participantes">
+		        	</div>
+		        </div>
+		    </div>
+		    <!--OBRAS PUBLICADAS-->
+		    <section class="row" id="sctndxcu"> <!--Cuento-->
+				<div class="container col s8 offset-s2">
+					<div class="card">
+						<img class="circle col s3 responsive-img" src="img/cools_pic.png" id="avtrndx">
+							<div class="col s8 push-s1">
+								<h4 class="autor">Nombre del autor</h4>
+								<h3 class="obra">Cuento: Nombre de la obra</h3>
+								<h4 class="descobra">Descripción de la obra</h4>
+							</div>
 						</div>
 					</div>
-				</div>	
-			</div>
-		</div>
-		<br>
-		<div class="container">
-			<div class="card teal accent-4 tarjetas">
-				<div class="row">
-					<img class="cricle col s4 responsive-img" src="img/cools_pic.png">
-					<div class="col s8">
-						<h3>Nombre del autor</h3>
-						<h3>Caricatura: Nombre de la obra</h3>
-						<div>
-							<h4>Aqui la caricatura </h4>
+				</div>
+			</section>
+			<section class="row" id="sctndxfo"> <!--Serie fotográfica-->
+				<div class="container col s8 offset-s2">
+					<div class="card">
+						<img class="circle col s3 responsive-img" src="img/cools_pic.png" id="avtrndx">
+							<div class="col s8 push-s1">
+								<h4 class="autor">Nombre del autor</h4>
+								<h3 class="obra">Serie fotográfica:<br>Nombre de la serie</h3>
+								<div class="obraslds">
+									<h3>SLIDES</h3>
+								</div>
+							</div>
 						</div>
 					</div>
-				</div>	
-			</div>
-		</div>	
-		
+				</div>
+			</section>
+			<section class="row" id="sctndxca"> <!--Caricatura-->
+				<div class="container col s8 offset-s2">
+					<div class="card">
+						<img class="circle col s3 responsive-img" src="img/cools_pic.png" id="avtrndx">
+							<div class="col s8 push-s1">
+								<h4 class="autor">Nombre del autor</h4>
+								<h3 class="obra">Caricatura:<br>Nombre de la obra</h3>
+								<div class="obraslds">
+									<h3>SLIDES</h3>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
 	</body>
 	</html>
