--- a/loginFacebook.html
+++ b/loginFacebook.html
@@ -12,7 +12,7 @@
 	<body>
 		<header>
 			<div class="row">
-				<div class="card-panel col s8 offset-s2" id="cardlgnfb">
+				<div class="card-panel col s8 offset-s2 z-depth-2" id="cardlgnfb">
 					<h2 class="center-align txthdr">Conéctate a Facebook<br>y sube tu obra</h2>
 				</div>
 				<div class="col s1 offset-s1"> <!--ICONO QUE REGRESA A PÁG. INICIO-->
