Cambios INDEX y CSS (index)

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<!--IMAGEN ENCABEZADO-->
 		<header class="row" id="hdrndx">
 			<div class="col s2 offset-s2" id="divimgndx">
-				<img class="responsive-img" src="img/mp.png">
+				<img class="responsive-img" src="img/master.png">
 			</div>
 			<!--TEXTO ENCABEZADO-->
 			<div class="col s6" id="divtxtndx">
@@ -40,7 +40,7 @@
 		    <section class="row" id="sctndxcu"> <!--Cuento-->
 				<div class="container col s8 offset-s2">
 					<div class="card">
-						<img class="circle col s3 responsive-img" src="img/cools_pic.png" id="avtrndx">
+						<img class="circle col s3 responsive-img" src="img/avtrh.jpg" id="avtrndx">
 							<div class="col s8 push-s1">
 								<h4 class="autor">Nombre del autor</h4>
 								<h3 class="obra">Cuento: Nombre de la obra</h3>
@@ -53,7 +53,7 @@
 			<section class="row" id="sctndxfo"> <!--Serie fotográfica-->
 				<div class="container col s8 offset-s2">
 					<div class="card">
-						<img class="circle col s3 responsive-img" src="img/cools_pic.png" id="avtrndx">
+						<img class="circle col s3 responsive-img" src="img/avtrm.jpg" id="avtrndx">
 							<div class="col s8 push-s1">
 								<h4 class="autor">Nombre del autor</h4>
 								<h3 class="obra">Serie fotográfica:<br>Nombre de la serie</h3>
@@ -68,7 +68,7 @@
 			<section class="row" id="sctndxca"> <!--Caricatura-->
 				<div class="container col s8 offset-s2">
 					<div class="card">
-						<img class="circle col s3 responsive-img" src="img/cools_pic.png" id="avtrndx">
+						<img class="circle col s3 responsive-img" src="img/avtrm2.png" id="avtrndx">
 							<div class="col s8 push-s1">
 								<h4 class="autor">Nombre del autor</h4>
 								<h3 class="obra">Caricatura:<br>Nombre de la obra</h3>
